Initial commit: SFx10 - Civic Meetings Supreme with beautiful civic design and mock AI responses

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Voice-based engineering discussions transcribed and analyzed into structured design output"
+      content="SFx10 - Civic Meetings Supreme"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Huddle</title>
+    <title>SFx10 - Civic Meetings Supreme</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
